# stellar-risc0-verifier

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  deployment.toml
.github/workflows/: docs.yml  gas-benchmark.yml
contracts/emergency-stop/: Cargo.toml
contracts/emergency-stop/src/: lib.rs  test.rs
contracts/groth16-verifier/: Cargo.toml  build.rs  parameters.json  vk.json
contracts/groth16-verifier/src/: lib.rs  test.rs  types.rs
contracts/groth16-verifier/src/crypto/: bn254.rs
contracts/interface/: Cargo.toml
contracts/interface/src/: lib.rs  types.rs
contracts/mock-verifier/src/: lib.rs
contracts/risc0-router/src/: lib.rs  test.rs
contracts/risc0-verifier/: Cargo.toml
contracts/risc0-verifier/src/: lib.rs  test.rs
contracts/risc0-verifier/src/crypto/: bn254.rs  mod.rs
contracts/timelock/src/: lib.rs  test.rs
docs/: upgrading-groth16-verifier.md
scripts/: README.md  deploy_verifier.sh  lib.sh  manage.sh
scripts/commands/: deploy.sh  self_admin.sh  utility.sh  verifier_management.sh
tools/build-utils/: Cargo.toml
tools/build-utils/src/: lib.rs  tagged.rs  types.rs
